feat: add ability to get data from a subscribed topic
