# api/routes/topic.js
@@ -1,0 +1,7 @@
+const express = require("express")
+const router = express.Router()
+const topicCtl = require('../controllers/topic.js')
+
+router.get('/:topic', topicCtl.getAllTopicData)
+
+module.exports = router
