# api/swagger.yaml
@@ -81,3 +81,34 @@ paths:
                   success:
                     type: boolean
                     example: true
+  '/topic/{topic}':
+    get:
+      tags:
+        - topic
+      summary: Get all data from a subscribed topic
+      description: Returns all data stored in a topics associated collection since it was subscribed to
+      responses:
+        '200':
+          description: Example data from a motion sensor
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  sensorId:
+                    type: integer
+                    example: 1
+                  timestamp:
+                    type: string
+                    example: '2024-06-11T14:23:45.123Z'
+                  motionDetected:
+                    type: boolean
+                    example: true
+                  direction:
+                    type: string
+                    example: 'N'
+                  location:
+                    type: array
+                    example:
+                      - 37.7749
+                      - -122.4194
